# football-decision-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
assets/case_study/: case_study_slide.pptx
backup_refactor/: run.py.bak
backup_refactor/src_old/: engine.py  optimizer.py  optimizer_milp.py  policies.py
config/: policy.json
data/: mock_players.csv
docs/: architecture.md  case_study.md  decision_logic.md  multi_match_planning.md  optimization.md  system_design.md
docs - copia/: architecture.md  multi_match_planning.md  optimization.md
notebooks/: 01_decision_boundary_elite.ipynb  02_matchday_simulation_elite.ipynb  03_lineup_optimization_elite.ipynb  04_multi_match_planning_elite.ipynb  README.md
src/: constraints.py  decision.py  engine.py  policies.py
src/football_decision_engine/: constraints.py  engine.py  optimizer.py  optimizer_milp.py  policies.py
